--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js server for generating 'lorem ipsum' text",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Ivan Brusniak",
   "license": "ISC",
